<resources>
    <string name="app_name">Coloko V1</string>
    <string name="search_text">What are you looking for?</string>
    <string name="motors">Motors</string>
    <string name="property">Property</string>
    <string name="classified">Classifieds</string>
    <string name="jobs">Jobs</string>
    <string name="community">Community</string>
    <string name="continue_browsing">Continue last Search</string>
    <string name="continue_browsing_path_demo">Musical Instruments | Wind Instruments | Other | Woodwind</string>
    <string name="top_picks_in_classified">Top Picks in Classifieds</string>
    <string name="featured_ads">Featured and Urgent Ads</string>
    <string name="login_required">Login required</string>
    <string name="must_login">You must be logged in to use this feature</string>
    <string name="sign_up_to_continue">Log in or sign up to continue</string>
    <string name="login_with_email">Log in with Email</string>
    <string name="sign_up_with_email">Create an Account</string>
    <string name="my_account">My Account</string>
    <string name="account">Account</string>
    <string name="log_in">Log In</string>
    <string name="login">LOGIN</string>
    <string name="log_in_with_email">Log in with email</string>
    <string name="email_id">Email</string>
    <string name="add_filter">Add Filter</string>
    <string name="my_chats">My Chats</string>
    <string name="home">Home</string>
    <string name="notification">My Notifications</string>
    <string name="hidden">Hidden</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="enter_upload_title">Enter title</string>
    <string name="phone_no">Phone number</string>
    <string name="price">Price</string>
    <string name="salary_text">Salary</string>
    <string name="featured">Featured</string>
    <string name="urgent">Urgent</string>
    <string name="pay_stack">Pay using PayStack</string>
    <string name="place_ad">Place an Ad</string>
    <string name="add_more_info">Add More Info</string>
    <string name="tap_to_pin_location">Tap on map to Pin Location</string>
    <string name="select_location">Pin Location</string>
    <string name="this_is_listing_under">This will be listed in:</string>
    <string name="continue_title_selection">Continue</string>
    <string name="post">Post Ad</string>
    <string name="loading">Please wait..</string>
    <string name="add_photo">Add photo</string>
    <string name="upload_cv">Upload resume</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forget_password_description">Enter your email and we\'ll send you a link to create a new password</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="reset_your_password">RESET YOUR PASSWORD</string>
    <string name="sign_up_app">Sign up </string>
    <string name="name">First name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_sign_up">Log in or sign up to continue</string>
    <string name="log_out">Log out</string>
    <string name="my_ads">My Ads</string>
    <string name="expire_ads">Expired Ads</string>
    <string name="transaction">Transaction</string>
    <string name="my_favorites">My Favorites</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="sell">Sell</string>
    <string name="filter">Filter</string>
    <string name="sorting">Sorting</string>
    <string name="sort_by">Sort by</string>
    <string name="filter_by">Filter by</string>
    <string name="additional_info">Additional Info</string>
    <string name="date_new_to_old">Newest to Oldest</string>
    <string name="date_old_to_new">Oldest to Newest</string>
    <string name="price_high_low">Price Highest to Lowest</string>
    <string name="price_low_high">Price Lowest to Highest</string>
    <string name="filter_by_keyword">Filter by Keyword</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="location_selector">Location</string>
    <string name="what_listing">What are you listing?</string>
    <string name="select_sub_category">Select sub category</string>
    <string name="all_categories">Categories</string>
    <string name="enter_short_title">First, enter a short title to describe your listing</string>
    <string name="choose_sub_category_in_upload">Choose sub category that your ad fits into.</string>
    <string name="choose_category_in_upload">Choose the category that your ad fits into.</string>
    <string name="my_posted_product">My Ads</string>
    <string name="search_result">Search Result</string>
    <string name="no_search_match">No products found, please refine your search</string>
    <string name="no_favorites">You have not marked any product as favorite</string>
    <string name="no_post">You have not posted any product</string>
    <string name="no_transaction">You have not done any transaction</string>
    <string name="my_saved_search">My Saved Searches</string>
    <string name="settings">Settings</string>
    <string name="country">Country</string>
    <string name="hide_phone">Hide phone number</string>
    <string name="negotiable">Negotiable</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="language">Language</string>
    <string name="support">Support</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="username">Username</string>
    <string name="make_an_offer">MAKE AN OFFER</string>
    <string name="login_to_know_more">Login to know more\nabout the seller</string>
    <string name="age">Age</string>
    <string name="usage">Usage</string>
    <string name="condition">Condition</string>
    <string name="posted_by">Posted by</string>
    <string name="phone_number">Phone</string>
    <string name="status">Property status</string>
    <string name="enter_message">Enter message</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="sms">SMS</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="light_usage">Light Usage</string>
    <string name="excellent">Excellent</string>
    <string name="share_using">Share using</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_country">Select country</string>
    <string name="select_location_ad">Select location</string>
    <string name="default_country">United States</string>
    <string name="select_state">Select state</string>
    <string name="select_city">Select city</string>
    <string name="select_language">Select language</string>
    <string name="choose_language">Choose your language</string>
    <string name="english">English</string>
    <string name="rupees">₹</string>
    <string name="premium">Upgrade To Premium</string>
    <string name="success_upgraded">Successfully Upgraded</string>
    <string name="upgrade_text">Huge discount on packages!</string>
    <string name="view_packages">View Packages</string>
    <string name="membership">Premium Membership</string>
    <string name="premium_dialog_title">Awesome!! You are just one step away from Premium</string>
    <string name="fetch_country">Loading countries..</string>
    <string name="fetch_state">Loading states..</string>
    <string name="fetch_city">Loading cities..</string>
    <string name="internet_issue">Please check your internet connection</string>
    <string name="chat_issue">It seems you have not started your chat yet</string>
    <string name="no_notification">You have not received any notification</string>
    <string name="offer_submitted">Your offer submitted to the owner</string>
    <string name="some_wrong">Some thing went wrong, we are working on it.</string>
    <string name="phone_number_undefined">Phone number is not defined or hidden by user.</string>
    <string name="some_wrong_retry">Some thing went wrong, please restart the upload process.</string>
    <string name="map_initializing">Please wait, map is getting initialized</string>
    <string name="posted_by_you">This product belong to you.</string>
    <string name="facebook_app_id">1061695014593855</string>
    <string name="fb_login_protocol_scheme">fb1061695014593855</string>
    <string name="privacy_policy">"By signing up you agree to our Terms &amp; Conditions and Privacy Policy"</string>
    <string name="privacy_text">"Privacy Policy"</string>
    <string name="default_notification_channel_id">"1009876676335"</string>
    <string name="default_notification_channel_name">"9883345445653"</string>
    <string name="default_notification_topic">"Classified"</string>
    <string name="recommended_ads_for_you">Recommended Ads for You</string>
    <string name="ad_attribution">Ad</string>
    <string name="searching">Searching...</string>
    <string name="appid">ca-app-pub-3940256099942544~3347511713</string>
    <string name="nativ_ad_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="ad_mob_banner">"ca-app-pub-3940256099942544/6300978111"</string>
    <string name="ad_mob_banner_ad_unit">"ca-app-pub-3940256099942544/6300978111"</string>
    <string name="no_advertisement_add">Ads Free</string>
    <string name="no_advertisement_add_description">No third party ads. Ex Google Ads</string>
    <string name="priority_support">Priority Support</string>
    <string name="priority_support_description">Your issues will be solved at the earliest</string>
    <string name="all_ads_premium">All Ads Premium</string>
    <string name="all_ads_premium_description">Your all posted ads will become premium for 30 days</string>
    <string name="featured_ad_premium">Featured</string>
    <string name="featured_ad_premium_description">Featured ads attract higher-quality viewer and are displayed prominently in the Featured ads section home page</string>
    <string name="urgent_ad_premium_">Urgent</string>
    <string name="urgent_ad_premium_description">Make your ad stand out and let viewer know that your advertise is time sensitive</string>
    <string name="highlighted_ad_premium">Highlighted</string>
    <string name="highlighted_ad_premium_description">Make your ad highlighted with border in listing search result page. Easy to focus</string>
    <string name="select_one_feature">Please select at least one premium feature to continue</string>
    <string name="title_action_reset">Reset</string>
    <string name="label_card_number">XXXX XXXX XXXX XXXX</string>
    <string name="label_expired_date">MM/YY</string>
    <string name="label_card_holder">CARD HOLDER</string>
    <string name="label_cvv_code">CVV CODE</string>
    <string name="hint_card_number">ENTER YOUR CARD NUMBER</string>
    <string name="hint_expired_date">ENTER EXPIRED DATE</string>
    <string name="hint_card_holder">ENTER CARD HOLDER</string>
    <string name="hint_cvv_code">ENTER CVV CODE</string>
    <string name="enter_card_details_err">Please enter the card details to proceed</string>
    <string name="label_secure_submission">Secure Submission</string>
    <string name="new_version">Latest Version is Available !! Kindly Click on Update Button Now for Enjoy Latest Update !!</string>
    <string name="upgrade">Upgrade Now</string>
    <string name="version_available">New Version Available</string>
    <string name="ad_post_limit">Ad Post Limit %1$s</string>
    <string name="ad_expiry_in">Ad Expiry in %1$s</string>
    <string name="ad_featured_fee">Featured Ad fee %1$s</string>
    <string name="ad_urgent_fee">Urgent Ad fee %1$s</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="google">Sign in with Google</string>
    <string name="or_txt">or</string>
</resources>