<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_screen_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white_background"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_terms_condition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="15dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/light_gray_color_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topDivider"
            app:srcCompat="@drawable/coloko" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/manual_login_screen_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:onClick="onClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_backward" />

        <View
            android:id="@+id/topDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/log_in"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/log_in_with_email_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/login_with_email"
            android:textColor="@color/dark_gray"
            android:textSize="22sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/illustration" />

        <FrameLayout
            android:id="@+id/login_edit_text_frame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/log_in_with_email_title_text_view">

            <EditText
                android:id="@+id/login_email_id_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/rounded_login_edit_text_states"
                android:drawableStart="@drawable/ic_outline_person"
                android:drawablePadding="15dp"
                android:hint="@string/email_username"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="@dimen/margin_fifteen"
                android:textAlignment="viewStart"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="@dimen/text_size_sixteen"
                app:drawableTint="@color/login_edittext_icon" />

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/margin_twenty"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_login_edit_text_states"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_edit_text_frame">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowHidePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/show"
                android:textColor="@color/login_edittext_icon"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/login_password_edit_text"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@null"
                android:drawableStart="@drawable/ic_outline_lock"
                android:drawablePadding="15dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/margin_fifteen"
                android:textAlignment="viewStart"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="@dimen/text_size_sixteen"
                app:drawableTint="@color/login_edittext_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvShowHidePassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/forget_password"
            android:textColor="@color/login_text"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_up_with_email_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/sign_up_with_email"
            android:textColor="@color/login_text"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_login_button_states"
            android:enabled="false"
            android:onClick="onClick"
            android:text="@string/log_in"
            android:textColor="@color/login_button_text_color"
            android:textSize="@dimen/text_size_sixteen"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />

        <LinearLayout
            android:id="@+id/optionDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_forgot_password">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/light_gray" />

            <TextView
                android:id="@+id/txtOrOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/or_txt"
                android:textAlignment="center"
                android:textColor="@color/light_gray_color_text"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/light_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/google_sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_background_blue"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/optionDivider">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:src="@drawable/google_plus_logo"
                app:tint="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="3dp"
                android:background="#5ba6fc" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="15dp"
                android:text="@string/google"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_with_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_background_blue"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:src="@drawable/facebook_logo"
                app:tint="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="3dp"
                android:background="#5ba6fc" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="15dp"
                android:text="@string/facebook"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loadingSpinner"
        layout="@layout/sliding_progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>