<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forget_password_screen_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    tools:context=".ManualLoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/forgotPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_password"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/forgot_password_screen_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:onClick="onClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_backward" />

        <View
            android:id="@+id/topDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTitle" />

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topDivider"
            app:srcCompat="@drawable/login_illustration" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgot_your_psw_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/forget_password"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_size_twenty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/illustration" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forget_password_desc_text_view"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/forget_password_description"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_your_psw_title_text_view" />

        <FrameLayout
            android:id="@+id/forgot_password_edit_text_frame"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twenty_five"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forget_password_desc_text_view">

            <EditText
                android:id="@+id/forgot_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/rounded_login_edit_text_states"
                app:drawableTint="@color/login_edittext_icon"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="15dp"
                android:hint="@string/email_id"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="@dimen/margin_fifteen"
                android:textAlignment="viewStart"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="@dimen/text_size_sixteen" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgot_password_button"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="@dimen/margin_fifteen"
            android:text="@string/reset_your_password"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_sixteen"
            android:onClick="onClick"
            android:enabled="false"
            android:textColor="@color/login_button_text_color"
            android:background="@drawable/rounded_login_button_states"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_edit_text_frame" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/forget_password_sliding_progress_indicator"
        layout="@layout/sliding_progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>